# aws_ml_academy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/module3/lab_3_1/: creating_and_importing_data.ipynb
src/module3/lab_3_2/: exploring_data.ipynb
src/module3/lab_3_3/: encoding_categorical_data.ipynb
src/module3/lab_3_4/: training_a_model_using_aws_sagemaker.ipynb  training_a_model_using_google_colab.ipynb
src/module3/lab_3_5/: deploying_a_model_using_amazon_sagemaker.ipynb  deploying_a_model_using_colab_ngrok.ipynb
